--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+actix = "0.12.0"
 anyhow = "1.0.52"
 async-trait = "0.1.52"
 dotenv = "0.15.0"
