--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ dotenv = "0.15.0"
 grammers-client = "0.3.0"
 grammers-session = "0.3.0"
 log = "0.4.14"
+rpassword = "5.0.1"
 simple_logger = "1.16.0"
 tokio = { version = "1.15.0", features = ["full"] }
 
