--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ async-trait = "0.1.52"
 dotenv = "0.15.0"
 grammers-client = "0.3.0"
 grammers-session = "0.3.0"
+grammers-tl-types = "0.3.0"
 log = "0.4.14"
 rpassword = "5.0.1"
 simple_logger = "1.16.0"
