--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
 name = "pbot"
-version = "0.1.0"
+description = "pan93412's extensible userbot, which is full-documented, enginnered and based on Actor model."
+authors = ["pan93412 <pan93412@gmail.com>"]
+repository = "https://github.com/pan93412/pbot"
+keywords = ["pbot", "actor", "userbot", "bot", "extensible", "full-documented", "enginnered"]
+version = "0.1.1"
 edition = "2021"
+publish = false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -12,7 +17,6 @@ async-trait = "0.1.52"
 dotenv = "0.15.0"
 grammers-client = "0.3.0"
 grammers-session = "0.3.0"
-grammers-tl-types = "0.3.0"
 log = "0.4.14"
 rpassword = "5.0.1"
 simple_logger = "1.16.0"
