docs: add README.md and documented .env

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,14 @@
+# Developer's API ID, required to interact with the Telegram's API.
+#
+# You may obtain your own in <https://my.telegram.org/auth>.
 TG_ID=1
+# Developer's API hash, required to interact with Telegram's API.
+#
+# You may obtain your own in <https://my.telegram.org/auth>.
 TG_HASH=STRING
+# Your mobile number.
+#
+# Example: +886912345678
 TG_MOBILE_NUMBER=+PHONE_NUMBER
+# Modules/Fwd: The Telegram Chat to forward the message to.
 TG_FWD_TO=1145141919
