--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,5 +21,6 @@ log = "0.4.14"
 rpassword = "5.0.1"
 simple_logger = "1.16.0"
 tokio = { version = "1.15.0", features = ["full"] }
+tokio-cron-scheduler = "0.3.1"
 
 [features]
