--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ actix = "0.12.0"
 anyhow = "1.0.52"
 async-trait = "0.1.52"
 dotenv = "0.15.0"
+futures = "0.3.19"
 grammers-client = "0.3.0"
 grammers-session = "0.3.0"
 log = "0.4.14"
