--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,6 @@ simple_logger = "1.16.0"
 tokio = { version = "1.15.0", features = ["full"] }
 
 [features]
+
+[dev-dependencies]
+rusty-hook = "0.11.2"
