--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ anyhow = "1.0.52"
 async-trait = "0.1.52"
 dotenv = "0.15.0"
 futures = "0.3.19"
+futures-locks = "0.7.0"
 grammers-client = "0.3.0"
 grammers-session = "0.3.0"
 log = "0.4.14"
