--- a/.rusty-hook.toml
+++ b/.rusty-hook.toml
@@ -1,6 +1,6 @@
 [hooks]
-pre-commit = "cargo test"
-pre-push = "cargo check && cargo fmt -- --check && cargo clippy"
+pre-commit = "cargo test && bash ./scripts/build-test.sh"
+pre-push = "bash ./scripts/build-test.sh && cargo fmt -- --check && cargo clippy"
 
 [logging]
 verbose = true
