--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,9 +23,10 @@ simple_logger = "1.16.0"
 tokio = { version = "1.15.0", features = ["full"] }
 
 [features]
-default = ["fwdmod"]
+default = ["fwdmod", "addrankmod"]
 fwdmod = []
 getinfomod = []
+addrankmod = []
 
 [dev-dependencies]
 rusty-hook = "0.11.2"
