--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,32 +1,2 @@
-[package]
-name = "pbot"
-description = "pan93412's extensible userbot, which is full-documented, engineered and based on Actor model."
-authors = ["pan93412 <pan93412@gmail.com>"]
-repository = "https://github.com/pan93412/pbot"
-keywords = ["pbot", "actor", "userbot", "bot", "extensible", "full-documented", "enginnered"]
-version = "0.1.1"
-edition = "2021"
-publish = false
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-actix = "0.12.0"
-anyhow = "1.0.54"
-dotenv = "0.15.0"
-futures = "0.3.21"
-grammers-client = "0.3.0"
-grammers-session = "0.3.0"
-log = "0.4.14"
-rpassword = "5.0.1"
-simple_logger = "2.1.0"
-tokio = { version = "1.17.0", features = ["full"] }
-
-[features]
-default = ["fwdmod", "addrankmod"]
-fwdmod = []
-getinfomod = []
-addrankmod = []
-
-[dev-dependencies]
-rusty-hook = "0.11.2"
+[workspace]
+members = ["pbot"]
