--- a/pbot_modules_derive/Cargo.toml
+++ b/pbot_modules_derive/Cargo.toml
@@ -2,6 +2,8 @@
 name = "pbot_modules_derive"
 version = "0.1.0"
 edition = "2021"
+license = "GPL-3.0-or-later"
+publish = false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
