refactor(scripts): rewrite build-test in Python 3
For extensibility.

--- a/.rusty-hook.toml
+++ b/.rusty-hook.toml
@@ -1,5 +1,5 @@
 [hooks]
-pre-commit = "cargo test && bash ./scripts/build-test.sh"
+pre-commit = "cargo test && ./scripts/build-test.py"
 pre-push = "bash ./scripts/build-test.sh && cargo fmt -- --check && cargo clippy"
 
 [logging]
